fix(page): changed alignment of text for mobile screens

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -4676,7 +4676,8 @@ div.mapboxgl-popup-content .project__details {
     top: 45%;
   }
   @media (max-width: $screen-xs) {
-    top: 40%;
+    top: 60%;
+    right: 10%;
   }
 }
 
